@@ -2,6 +2,6 @@ AUX kvm-83-vtd.patch 1286 RMD160 0dffa8d385f88c7452c5fbee9e8af8373f6b3ea7 SHA1 6
 AUX kvm-88-link-with-cflags.patch 2373 RMD160 eb24afa3869cbc129fe652573d236739aee05231 SHA1 a256dd06d0a83d92727f20f24e682847224e3697 SHA256 20cf914b63d46c67fda0fa08543d0beddf0f45ec1a9a3a063e4d922a9d5e68a3
 DIST kvm-patches-20090725.tar.gz 2466 RMD160 9497217f8b1e3e8165b2643965a6ece3f4301ec3 SHA1 85cf2fcc21dd598d8a2dfce081c75f2d0feb1ef1 SHA256 98199d6b7d5e9c3211a8abd2ecb87715c1e0260b683a07b356331a6bb08b94f1
 DIST qemu-kvm-devel-88.tar.gz 4364002 RMD160 654683522dc670fc8743e415b8f5b2cb32bed092 SHA1 4ad9af298d3d6ae25e3c5f6b1cd9bb03a7ad8315 SHA256 d407fc0760684e812e72451661acd620c0ac44b896c8bc9d0cf83565dca1987d
-EBUILD kvm-88-r1.ebuild 5660 RMD160 b460c9ce710064449ac0c7a52194850559fcfdca SHA1 2d0c36f89cbc426ae64175e8fe5f41ec2c100dc0 SHA256 2967687b3b2645d6dbf497caad107474f8711e19cc72bdc6a8188690b719c723
-MISC ChangeLog 10053 RMD160 91c94e039d101d45d254430198b2f643798c0921 SHA1 edce14439b34627a64bf2bdca86b42bc5df5c5cb SHA256 e571da9df3b6a0430d3823de642146967e290c85bad7d8466f28ed4252200015
+EBUILD kvm-88-r1.ebuild 5807 RMD160 2120d9d67f12f50c69e6787c011c07a47dc45f80 SHA1 d0f832655fe5f618a1fffbfc9f323114d451f858 SHA256 a7c4ffa18f2939f64d6e80b9bd182d9fc92fd72d41ef2cf1220311e4492767df
+MISC ChangeLog 10153 RMD160 2af95dadd1e66dd39689e2e42ac2be3f77263db1 SHA1 34a165031d1d9f55d4dbe85e8a95afd04dc6f33b SHA256 3da7a2b1d3522c05d2c8e44fe11ec1b7b45ec27ee0c1974bb0f6ef4bccf7696e
 MISC metadata.xml 1148 RMD160 34ed50eee085d551a2570b4e7807c4be7d83753f SHA1 0b624edad186055269c3612295e8a1aacbeab059 SHA256 44b84a050d197b9527e7bb7f4f7cc97c4eb973446c1d400e93d32c51e928dfda
