@@ -3,3 +3,4 @@ DIST genpatches-2.6.31-3.extras.tar.bz2 24940 RMD160 c492175a249866311f8f8ae10a2
 DIST hardened-patches-2.6.31-4.extras.tar.bz2 302708 RMD160 548e0f9466269506e5a9f60d8d3d6e0c236c0ebb SHA1 24feab096cb8df479220b9593efadd632ae548b7 SHA256 7ac9c0b163664d805c82ce7e0ed7953c6d551af59e7cb0a87e961f8482d353d1
 DIST linux-2.6.31.tar.bz2 61494822 RMD160 c0d88e63740abf0d4f9d82557260a31643f5a01b SHA1 c6e0e6b473ba2b80d164e37cfabf294e783c03d9 SHA256 0acd83f7b85db7ee18c2b0b7505e1ba6fd722c36f49a8870a831c851660e3512
 EBUILD hardened-sources-2.6.31-r1.ebuild 1908 RMD160 edcc14f13e95ccbf9c37d6d8fec8ee7646beaf5f SHA1 d26e35d8f8b0466fa9f4a2c5f2d4ee3391f5f399 SHA256 02e7e9853cee07787fe56415f81f60fda5e504da0280218d0c1b9220a564af25
+MISC metadata.xml 541 RMD160 c1aeb8ba5490432cbb1ddd97bb83a38988e0906e SHA1 5c2615e7e4074cac951e491ead158bb4cbb637b9 SHA256 89a1257a0cfe45645ebe83f878abbf88e32bc25344967346833e4b651797acc2
