@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm/ChangeLog,v 1.39 2009/09/21 14:57:21 dang Exp $
 
+  09 Oct 2009; Peter Hjalmarsson <xake@gentoo.org> kvm-88-r1.ebuild:
+  Also filter stack-protector
+
   02 Oct 2009; Peter Hjalmarsson <xake@gentoo.org>
   files/kvm-88-link-with-cflags.patch:
   Update patch to catch some more missing CFLAGS, for you filter-flags
